--- a/src/style.css
+++ b/src/style.css
@@ -49,14 +49,20 @@ body{
 }
 
 .roster{
-
     display: flex;
     justify-content: space-between;
     margin: 1rem;
     gap: 1rem;
-
-
 }
+
+.controls{
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+    gap: 1rem;
+}
+
+
 
 
 .roster .roster-area{
